--- a/video_processing/Makefile
+++ b/video_processing/Makefile
@@ -1,2 +1,4 @@
-video_test: EQwindow.cpp shader_utils.cpp
-		g++ EQwindow.cpp shader_utils.cpp -o video_test.o -w -lGL -lglut -lGLEW
+eq_test: EQwindow.cpp shader_utils.cpp
+		g++ EQwindow.cpp shader_utils.cpp -o eq_test.o -w -lGL -lglut -lGLEW
+shader_test: window.cpp shader_utils.cpp
+		g++ window.cpp shader_utils.cpp -o shader_test.o -lGL -lglut -lGLEW
