--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ project (bz)
 # Chain kiss-fft build since library needed for audio processing  
 add_subdirectory (kiss-fft) 
 add_library (AudioProcessing AudioProcessing.cpp AudioProcessing.h)
-add_executable(bz main.cpp shader_utils.cpp AudioProcessing.cpp gpio-sysfs.cpp MCP3008Comm.cpp)
+add_executable(bz main.cpp shader_utils.cpp AudioProcessing.cpp gpio-sysfs.cpp MCP3008Comm.cpp TestLatency.cpp)
 
 set (CMAKE_CXX_STANDARD 11)
 find_package (Threads)
