MCP3008Comm unit test + refactoring

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,10 +3,13 @@ include_directories (../src
                      ${Boost_INCLUDE_DIRS}
                      )
 add_definitions (-DBOOST_TEST_DYN_LINK)
+list(APPEND BOOST_LIBS ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY}
+                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
+
+# executables
 add_executable (APtest.o testAudioProcessing.cpp)
-target_link_libraries (APtest.o
-                       AudioProcessing
-                       ${Boost_FILESYSTEM_LIBRARY}
-                       ${Boost_SYSTEM_LIBRARY}
-                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-                       )
+add_executable (MCPtest.o testMCP3008Comm.cpp)
+
+# linking
+target_link_libraries (APtest.o AudioProcessing ${BOOST_LIBS})
+target_link_libraries (MCPtest.o MCP3008Comm ${BOOST_LIBS})
