--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory (src)
 add_subdirectory (test)
 enable_testing ()
 add_test (NAME AudioProcessingTest COMMAND APtest.o)
+add_test (NAME MCP3008CommTest COMMAND MCPtest.o)
