--- a/test/display/Makefile
+++ b/test/display/Makefile
@@ -1,2 +1,2 @@
 all: seq.cpp NHD223Comm.cpp GPIODUtils.cpp
-	g++  GPIODUtils.cpp NHD223Comm.cpp   seq.cpp -o ct -std=c++17 -lgpiodcxx 
+	g++ -W -Wall seq.cpp GPIODUtils.cpp NHD223Comm.cpp  -o ct -std=c++17 -lgpiodcxx 
